--- a/index.html
+++ b/index.html
@@ -4,12 +4,105 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- bootstrap-icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+  <!-- custom -->
+  <link rel="stylesheet" href="/css/style.css">
+  <script defer src="/js/script.js"></script>
   <title>Document</title>
-  <script>
-    document.write("환영합니다!")
-  </script>
 </head>
 <body>
-  
+  <main>
+    <!-- left aside -->
+    <header>
+      <h1>
+        <i class="bi bi-bag-heart-fill"></i>
+        <span>GMA LAB</span>
+      </h1>
+      <address>
+        2023 GMALAB <br /> ALL RIGHT RESERVED.
+      </address>
+    </header>
+    <!-- right naviagtion -->
+    <nav>
+      <ul>
+        <li>
+          <a href="">
+          <i class="bi bi-envelope-fill"></i>
+        </a>
+      </li>
+        <li>
+          <a href="#">
+          <i class="bi bi-search"></i>
+        </a>
+      </li>
+      </ul>
+    </nav>
+    <!-- main section -->
+    <section>
+      <article>
+        <div class="inner">
+          <div class="txt">
+            <h2>01</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dicta minus recusandae nesciunt dignissimos praesentium dolore ab quod nihil saepe, fugit mollitia, perspiciatis repudiandae, qui unde? Fugit eveniet architecto sit.
+            </p>
+          </div>
+          <figure>
+            <video src="/videos/vid1.mp4" muted loop></video>
+          </figure>
+        </div>
+      </article>
+      <article>
+        <div class="inner">
+          <div class="txt">
+            <h2>02</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dicta minus recusandae nesciunt dignissimos praesentium dolore ab quod nihil saepe, fugit mollitia, perspiciatis repudiandae, qui unde? Fugit eveniet architecto sit.
+            </p>
+          </div>
+          <figure>
+            <video src="/videos/vid2.mp4" muted loop></video>
+          </figure>
+        </div>
+      </article>
+      <article>
+        <div class="inner">
+          <div class="txt">
+            <h2>03</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dicta minus recusandae nesciunt dignissimos praesentium dolore ab quod nihil saepe, fugit mollitia, perspiciatis repudiandae, qui unde? Fugit eveniet architecto sit.
+            </p>
+          </div>
+          <figure>
+            <video src="/videos/vid3.mp4" muted loop></video>
+          </figure>
+        </div>
+      </article>
+      <article>
+        <div class="inner">
+          <div class="txt">
+            <h2>04</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dicta minus recusandae nesciunt dignissimos praesentium dolore ab quod nihil saepe, fugit mollitia, perspiciatis repudiandae, qui unde? Fugit eveniet architecto sit.
+            </p>
+          </div>
+          <figure>
+            <video src="/videos/vid4.mp4" muted loop></video>
+          </figure>
+        </div>
+      </article>
+
+    </section>
+    <aside>
+      <div class="txt">
+        <h1>GREEN MEDIA LAB</h1>
+        <P>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia consequuntur distinctio libero quisquam reprehenderit laborum ipsam itaque vitae quaerat autem tempora exercitationem tenetur natus, alias pariatur, corrupti voluptate! Corporis, eligendi!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia consequuntur distinctio libero quisquam reprehenderit laborum ipsam itaque vitae quaerat autem tempora exercitationem tenetur natus, alias pariatur, corrupti voluptate! Corporis, eligendi!
+        </P>
+        <span>CLOSE</span>
+        <figure>
+          <video src="/videos/vid1.mp4" loop muted></video>
+        </figure>
+      </div>
+    </aside>
+  </main>
 </body>
 </html>
